<resources>
    <string name="app_name">03-Constraint-Layout</string>
    <string name="title_text">Cantidad de dinero</string>
    <string name="money_hint">0</string>
    <string name="five_cents_text">$0.05</string>
    <string name="ten_cents_text">$0.10</string>
    <string name="one_dollar_text">$1.00</string>
    <string name="quarter_text">$0.25</string>
    <string name="money_value">$ %s</string>
    <string name="one_dollar_description_text">One dollar</string>
    <string name="quarter_description_text">Quarter</string>
    <string name="five_cents_description_text">Five Cents</string>
    <string name="ten_cents_description_text">Ten cents</string>
</resources>